# iced

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  COPYING  MANIFEST.in  Makefile  README.rst  documentation.html  environment-dev.yml  environment.yml  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  whats_new.html
.github/workflows/: before_install.sh  build-doc.yml  test.yml  test_script.sh
_downloads/02d41bb77d97079180eaca9c29d89235/: plot_filtering_strategies.py
_downloads/0d519ccb8f0b5996392a50cf18e78b93/: plot_intra_inter_contact_maps.ipynb
_downloads/5a41e634be2e2f129b20bc5f24d672ac/: plot_filtering_strategies.ipynb
_downloads/727e6ced98f1e91f8c90363bca49db16/: plot_ice_normalization.ipynb
_downloads/801bbe3ceea042d8650b3be440e05014/: plot_loic_normalization.ipynb
_sources/: index.rst.txt
_sources/auto_examples/: index.rst.txt
auto_examples/: index.html
continuous_integration/: install.sh
dev/: .buildinfo  documentation.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  whats_new.html
dev/modules/: classes.html  (+4 more)
doc/: Makefile  conf.py  index.rst  install.rst  whats_new.rst
iced/: __init__.py  _filter_.c  _filter_.pyx  _normalization_.c  _normalization_.pyx  filter.py  normalization.py  setup.py
modules/: classes.html  datasets.html  filter.html  normalization.html  utils.html
requirements/: default.txt  docs.txt  tests.txt
tutorial/: index.html
(+100 files in other folders)
